--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
           image: "https://i.ibb.co.com/zTzRQKGp/Anatomical-Support-Briefs.jpg",
           link: "/anatomical-support-briefs.html",
         },
+         {
+          title: "Expert Gas Engineer in Sutton Coldfield – 24/7 Gas, Heating & Boiler Specialists",
+          category: "Service",
+          date: "Oct 11, 2025",
+          description: "Need a certified gas engineer in Sutton Coldfield? Apex Emergency Repairs offers 24/7 gas, boiler & heating services. Call 0121 405 1689 – Fast 2-hour response.",
+          image: "https://i.ibb.co.com/TBVpVThq/Emergency-Plumbing-Repairs-Sutton-Coldfield.png",
+          link: "/gas-engineer-in-sutton-coldfield.html",
+        },
       ];
 
       // Function to render posts
@@ -146,3 +154,4 @@
     </script>
   </body>
 </html>
+
