--- a/gas-engineer-in-sutton-coldfield.html
+++ b/gas-engineer-in-sutton-coldfield.html
@@ -164,12 +164,13 @@
           <h2 class="text-2xl font-bold mt-6 mb-4 text-black">
             Contact Your Local Gas Engineer in Sutton Coldfield
           </h2>
-          <p>
+          <p class="mb-4">
             If you need a trusted gas engineer in Sutton Coldfield, emergency
             boiler repair, or any heating or plumbing service, contact
             Apex Emergency Repairs
             today. Our friendly team is always ready to help.
           </p>
+          
           <p>
             📍 Address: Apex Emergency Repairs, Stirchley House, 21 Reddicap
             Trading Estate, Sutton Coldfield, B75 7BU<br />
@@ -316,3 +317,4 @@
     </footer>
   </body>
 </html>
+
