--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
           image: "https://i.ibb.co.com/TBVpVThq/Emergency-Plumbing-Repairs-Sutton-Coldfield.png",
           link: "/gas-engineer-in-sutton-coldfield.html",
         },
+         {
+          title: "Warmth, Mood, and Motion: Expressive Long Johns for Every Body",
+          category: "lifestyle",
+          date: "Oct 31, 2025",
+          description: "Need a certified gas engineer in Sutton Coldfield? Apex Emergency Repairs offers 24/7 gas, boiler & heating services. Call 0121 405 1689 – Fast 2-hour response.",
+          image: "https://i.ibb.co.com/35HDvg5h/anatomical-long-underwear-that-moves-with-you.jpg",
+          link: "/gas-engineer-in-sutton-coldfield.html",
+        },
       ];
 
       // Function to render posts
@@ -154,4 +162,5 @@
     </script>
   </body>
 </html>
+
 
