--- a/anatomical-long-underwear-that-moves-with-you.html
+++ b/anatomical-long-underwear-that-moves-with-you.html
@@ -151,6 +151,10 @@
             feels—understated enough for layering, yet refined enough to wear on
             its own.
           </p>
+          <p class="text-base text-gray-800 text-center leading-relaxed">
+  <span class="font-semibold text-indigo-600">Discover contour-driven fits</span> at 
+  <span class="font-bold">DealByEthan.shop</span>.
+</p>
 
           <h2 class="text-2xl font-bold mt-6 mb-4 text-black">
             Lounge-Ready Silhouettes with Modern Styling
@@ -247,7 +251,10 @@
             Both brands share one belief: the right layer can change your entire
             outlook.
           </p>
-
+<p class="text-base text-gray-800 text-center leading-relaxed">
+  <span class="font-semibold text-indigo-600">Make your next styling move</span> at 
+  <span class="font-bold">DealByEthan.shop</span>.
+</p>
           <h2 class="text-2xl font-bold mt-6 mb-4 text-black">
             Thermal Comfort Meets Expressivewear Clarity
           </h2>
@@ -291,3 +298,4 @@
     </footer>
   </body>
 </html>
+
